--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "This project provides a robust and efficient API for URL shortening app. Built on Node.js, this API offers fast and reliable URL shortening functionality, allowing users to create shortened versions of long URLs, which are easier to share and manage.",
   "main": "app.js",
+  "type": "commonjs",
   "directories": {
     "test": "test"
   },
