--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "scripts": {
     "start": "nodemon app.js",
     "format:check": "prettier --check .",
-   "format:write": "prettier --write .",
-   "lint:check": "eslint .",
-   "lint:fix": "eslint --fix ."
+    "format:write": "prettier --write .",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "connect-redis": "^7.1.1",
@@ -21,7 +21,9 @@
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "redis": "^4.6.13",
-    "sequelize": "^6.37.2"
+    "sequelize": "^6.37.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
