--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,9 @@
          "node": true
     },
     "rules": {
-         "no-console": "error"
+         "no-console": "warn",
+         "prettier/prettier": "error",
+          "no-unused-vars": "warn",
+          "no-var": "error"
     }
 }
