--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,8 +10,7 @@
          "node": true
     },
     "rules": {
-         "no-console": "warn",
-         "prettier/prettier": "error",
+         "no-console": "off",
           "no-unused-vars": "warn",
           "no-var": "error"
     }
