Add bcrypt dependency and create user seeder

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
