--- a/.sequelizerc
+++ b/.sequelizerc
@@ -4,7 +4,7 @@ const path = require('path');
 
 module.exports = {
   'config': path.resolve('src/config', 'config.js'),
-  'models-path': path.resolve('src/models', 'models'),
+  'models-path': path.resolve('src', 'models'),
   'seeders-path': path.resolve('src/db', 'seeders'),
   'migrations-path': path.resolve('src/db', 'migrations')
 };
