--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test-cover": "jest --coverage"
   },
   "dependencies": {
+    "@casl/ability": "^6.7.1",
     "bcrypt": "^5.1.1",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
