--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "joi": "^17.12.3",
     "pg": "^8.11.5",
     "redis": "^4.6.13",
     "sequelize": "^6.37.2",
