--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "test": "test"
   },
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "npm run tailwind && npm run nodemon",
+    "nodemon": "nodemon app.js",
     "format:check": "prettier --check .",
     "format:write": "prettier --write .",
     "lint:check": "eslint .",
     "lint:fix": "eslint --fix .",
     "prepare": "husky",
     "test": "jest",
-    "test-cover": "jest --coverage"
+    "test-cover": "jest --coverage",
+    "tailwind": "postcss public/stylesheets/tailwind.css -o public/stylesheets/main.css"
   },
   "dependencies": {
     "@casl/ability": "^6.7.1",
+    "@tailwindcss/forms": "^0.5.7",
     "bcrypt": "^5.1.1",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
@@ -27,19 +30,23 @@
     "express": "^4.18.3",
     "joi": "^17.12.3",
     "pg": "^8.11.5",
+    "postcss-cli": "^11.0.0",
     "redis": "^4.6.13",
     "sequelize": "^6.37.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "tailwindcss": "^3.4.3"
   },
   "keywords": [
     "backend",
