--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prepare": "husky",
     "test": "jest",
     "test-cover": "jest --coverage",
-    "tailwind": "postcss public/stylesheets/tailwind.css -o public/stylesheets/main.css"
+    "tailwind": "postcss public/stylesheets/tailwind.css -o public/stylesheets/main.css",
+    "tailwind:watch": "postcss public/stylesheets/tailwind.css -o public/stylesheets/main.css --watch"
   },
   "dependencies": {
     "@casl/ability": "^6.7.1",
