--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "sequelize-cli": "^6.6.2",
+    "sequelize-mock": "^0.10.2",
     "tailwindcss": "^3.4.3"
   },
   "keywords": [
