--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "redis": "^4.6.13",
     "sequelize": "^6.37.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
